Fix slider alignment by removing inline-block

--- a/src/css/imports/slider.less
+++ b/src/css/imports/slider.less
@@ -3,7 +3,6 @@
 .jw-slider-container {
     height: @slider-height;
     width: 100%;
-    display : inline-block;
     position: relative;
     touch-action: none;
 }
