--- a/src/css/imports/vars.less
+++ b/src/css/imports/vars.less
@@ -40,8 +40,8 @@
 
 
 // Rails and sliders
-@slider-height: 1em;
 @rail-height: 0.25em;
+@slider-height: @rail-height;
 @def-rail-width: @rail-height;
 @def-rail-width-padding: 0.6em;
 @time-rail-width: @def-rail-width;
